[gd_scene load_steps=51 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_WalkInPlace.tscn" type="PackedScene" id=9]
[ext_resource path="res://SubFloor.gd" type="Script" id=10]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=12]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/glider2/longer wind noise.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/glider2/HG_graphic_model.glb" type="PackedScene" id=15]
[ext_resource path="res://default_env.tres" type="Environment" id=16]
[ext_resource path="res://gliderkinematics.gd" type="Script" id=17]
[ext_resource path="res://gliderpos.gd" type="Script" id=18]
[ext_resource path="res://gliderwingdynamics.gd" type="Script" id=19]
[ext_resource path="res://gliderdynamicstate.gd" type="Script" id=20]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 10, 10 )

[sub_resource type="OpenSimplexNoise" id=2]
period = 34.7

[sub_resource type="NoiseTexture" id=3]
noise = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.945098, 0.639216, 0.286275, 1 )
albedo_texture = SubResource( 3 )

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 600, 100 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.945098, 0.639216, 0.286275, 1 )
albedo_texture = SubResource( 3 )
uv1_scale = Vector3( 10, 1, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.286275, 0.835294, 0.945098, 1 )
albedo_texture = SubResource( 3 )
uv1_scale = Vector3( 10, 10, 1 )

[sub_resource type="PlaneMesh" id=8]
material = SubResource( 7 )
size = Vector2( 500, 500 )

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.001
bottom_radius = 0.02
height = 0.04

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.0431373, 0.152941, 0.882353, 1 )

[sub_resource type="SphereMesh" id=11]
radius = 0.02
height = 0.1

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.937255, 0.901961, 0.0666667, 1 )

[sub_resource type="SphereMesh" id=13]
radius = 0.02
height = 0.1

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.956863, 0.941176, 0.0352941, 1 )

[sub_resource type="CubeMesh" id=15]
size = Vector3( 0.02, 2, 0.02 )

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.960784, 0.945098, 0.0705882, 1 )

[sub_resource type="CubeMesh" id=17]
size = Vector3( 0.02, 2.8, 0.02 )

[sub_resource type="CapsuleMesh" id=18]
radius = 0.1
mid_height = 0.9
radial_segments = 16
rings = 2

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0.760784, 0.0470588, 0.0313726, 1 )

[sub_resource type="SphereMesh" id=20]
radius = 0.1
height = 0.21

[sub_resource type="SpatialMaterial" id=21]
albedo_color = Color( 0.054902, 0.705882, 0.905882, 1 )

[sub_resource type="PrismMesh" id=22]
size = Vector3( 0.05, 0.05, 1.5 )

[sub_resource type="SpatialMaterial" id=23]
albedo_color = Color( 0.890196, 0.0431373, 0.960784, 1 )

[sub_resource type="SphereMesh" id=24]
radius = 0.02
height = 0.2

[sub_resource type="SpatialMaterial" id=25]
albedo_color = Color( 0.972549, 0.980392, 0.0705882, 1 )

[sub_resource type="SphereMesh" id=26]
radius = 0.05
height = 0.2

[sub_resource type="SpatialMaterial" id=27]
albedo_color = Color( 0.945098, 0.909804, 0.0313726, 1 )

[sub_resource type="CubeMesh" id=28]
size = Vector3( 0.02, 0.02, 1 )

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.0235294, 0.6, 0.945098, 1 )

[sub_resource type="BoxShape" id=30]
extents = Vector3( 4, 0.8, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 1 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -7.89698, 1.8, -10.8282 )
far = 1000.0

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 5 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 13 )]

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 7 )]

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]

[node name="Locomotion_WalkInPlace" parent="OQ_ARVROrigin" instance=ExtResource( 9 )]

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.00711, 0.01, -8.9906 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="SubFloor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 221.307, -159.391, -19.587 )
script = ExtResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="SubFloor"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="SubFloor"]

[node name="Wall" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 146.794, 0.00999832, -73.8117 )
mesh = SubResource( 8 )
material/0 = null

[node name="OQ_UILabel" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.085156, 0, -0.996368, 0, 1, 0, 0.996368, 0, 0.085156, -4.58979, 1.45623, -8.99209 )

[node name="OQ_UI2DCanvas" parent="." instance=ExtResource( 11 )]
transform = Transform( -0.0314147, 0, -2.99984, 0, 3, 0, 2.99984, 0, -0.0314147, -7.07046, 1.39432, -10.7928 )
editor_live_update = false
transparent = false

[node name="ReferenceRect" type="ReferenceRect" parent="OQ_UI2DCanvas"]
margin_right = 200.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="OQ_UI2DCanvas/ReferenceRect"]
visible = false
margin_left = 91.9239
margin_top = 134.35
margin_right = 199.924
margin_bottom = 200.35
text = "Go!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 9.05875
margin_top = 28.3678
margin_right = 49.0587
margin_bottom = 42.3678
text = "|v|: "

[node name="airspeed" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 37.343
margin_top = 29.782
margin_right = 100.343
margin_bottom = 43.782
text = "0.0"

[node name="Label2" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 7.64455
margin_top = 47.4596
margin_right = 47.6445
margin_bottom = 61.4596
text = "sink: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sinkrate" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 39.4644
margin_top = 48.1667
margin_right = 102.464
margin_bottom = 62.1667
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 10.473
margin_top = 63.7231
margin_right = 50.473
margin_bottom = 77.7231
text = "AoA:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="angleofattack" type="Label" parent="OQ_UI2DCanvas/ReferenceRect"]
margin_left = 42.9999
margin_top = 66.5515
margin_right = 106.0
margin_bottom = 80.5515
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OQ_UI2DLogWindow" parent="." instance=ExtResource( 12 )]
transform = Transform( -0.080773, 0, -0.996733, 0, 1, 0, 0.996733, 0, -0.080773, -5.50922, -5.96046e-08, -13.4371 )

[node name="gliderpos" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.793352, 2.52042, -10.0855 )
collision_layer = 2
mode = 3
contacts_reported = 1
contact_monitor = true
script = ExtResource( 18 )

[node name="gliderkinematics" type="Node" parent="gliderpos"]
script = ExtResource( 17 )

[node name="gliderwingdynamics" type="Node" parent="gliderpos/gliderkinematics"]
script = ExtResource( 19 )

[node name="gliderdynamicstate" type="Node" parent="gliderpos"]
script = ExtResource( 20 )

[node name="glider2" parent="gliderpos" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 0.996195, -0.0871558, 0, 0.0871558, 0.996195, -0.026907, -1.53486, 0.682842 )

[node name="WindNoise3D" type="AudioStreamPlayer3D" parent="gliderpos/glider2"]
transform = Transform( 1, 0, 0, 0, 1, -2.23517e-08, 0, 1.49012e-08, 1, 0, 0.304175, 3.47675 )
stream = ExtResource( 14 )
attenuation_model = 3
max_db = 2.0

[node name="MeshInstance" type="MeshInstance" parent="gliderpos/glider2/WindNoise3D"]
transform = Transform( 2.65431e-14, 1.62921e-07, 1, 1, -1.62921e-07, 0, 1.62921e-07, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="AeroCentre" type="MeshInstance" parent="gliderpos"]
cast_shadow = 0
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="TetherPoint" type="MeshInstance" parent="gliderpos/AeroCentre"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.161 )
cast_shadow = 0
mesh = SubResource( 13 )
material/0 = SubResource( 14 )

[node name="AframeBisector" type="MeshInstance" parent="gliderpos/AeroCentre/TetherPoint"]
transform = Transform( 1, 0, 0, 0, 0.970296, 0.241922, 0, -0.241922, 0.970296, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="HangStrap" type="MeshInstance" parent="gliderpos/AeroCentre/TetherPoint"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = null

[node name="PilotBody" type="MeshInstance" parent="gliderpos/AeroCentre/TetherPoint/HangStrap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4, 0 )
mesh = SubResource( 18 )
material/0 = SubResource( 19 )

[node name="PilotHead" type="MeshInstance" parent="gliderpos/AeroCentre/TetherPoint/HangStrap/PilotBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.45 )
mesh = SubResource( 20 )
material/0 = SubResource( 21 )

[node name="PitchRate" type="MeshInstance" parent="gliderpos/AeroCentre"]
cast_shadow = 0
mesh = SubResource( 22 )
material/0 = SubResource( 23 )

[node name="CGWing" type="MeshInstance" parent="gliderpos/AeroCentre"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.221001 )
cast_shadow = 0
mesh = SubResource( 24 )
material/0 = SubResource( 25 )

[node name="NosePoint" type="MeshInstance" parent="gliderpos/AeroCentre"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.59882 )
cast_shadow = 0
mesh = SubResource( 26 )
material/0 = SubResource( 27 )

[node name="VelocityVector" type="MeshInstance" parent="gliderpos/AeroCentre/NosePoint"]
cast_shadow = 0
mesh = SubResource( 28 )
material/0 = SubResource( 29 )

[node name="CollisionShape" type="CollisionShape" parent="gliderpos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.687679, 0 )
shape = SubResource( 30 )

[node name="KinematicBody" type="KinematicBody" parent="gliderpos"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="gliderpos/KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.687679, 0 )
shape = SubResource( 30 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 161.433, 90.1653 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 16 )
